--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.4",
     "svelte": "^3.44.0",
+    "svelte-loading-spinners": "^0.1.7",
     "svelte-preprocess": "^4.10.5",
     "tailwindcss": "^3.0.23"
   },
