--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync"
+    "prepare": "svelte-kit sync",
+    "test": "jest"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
+    "jest": "^28.1.1",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.4",
     "svelte": "^3.44.0",
