Adds build, test and lint action and removes faulty deployment step

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fhnw-modulplanner",
-  "version": "0.0.1",
+  "name": "laniw.com",
+  "version": "1.0.0",
   "scripts": {
     "dev": "svelte-kit dev --port 5000",
     "build": "svelte-kit build",
@@ -16,6 +16,7 @@
     "jest": "^28.1.1",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.4",
+    "prettier": "^2.7.1",
     "svelte": "^3.44.0",
     "svelte-loading-spinners": "^0.1.7",
     "svelte-preprocess": "^4.10.5",
