--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Build and Tests
+name: Build, Test and Lint
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-app:
     name: Build Application
     runs-on: ubuntu-latest
 
@@ -28,7 +28,7 @@ jobs:
       - name: Build Application
         run: npm run build
 
-  test:
+  test-code:
     name: Run Tests
     runs-on: ubuntu-latest
 
@@ -50,7 +50,7 @@ jobs:
     - name: Run Tests
       run: npm test -- --passWithNoTests
 
-  lint:
+  lint-code:
     name: Run Linters
     runs-on: ubuntu-latest
 
