Formats all project files with prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
   "tabWidth": 2,
+  "useTabs": false,
   "singleQuote": false,
+  "quoteProps": "as-needed",
+  "trailingComma": "es5",
   "semi": true,
   "bracketSpacing": false,
   "arrowParens": "avoid",
