--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "semi": true,
   "bracketSpacing": false,
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "htmlWhitespaceSensitivity": "strict"
 }
