Fixes gt character on next line in svelte files (prettier)

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,12 @@
   "trailingComma": "none",
   "semi": true,
   "bracketSpacing": false,
+  "bracketSameLine": true,
   "arrowParens": "avoid",
   "endOfLine": "lf",
-  "htmlWhitespaceSensitivity": "strict"
+  "htmlWhitespaceSensitivity": "strict",
+  "svelteSortOrder": "options-scripts-styles-markup",
+  "svelteStrictMode": false,
+  "svelteAllowShorthand": true,
+  "svelteIndentScriptAndStyle": true
 }
