Uses creyD's prettier action for prettier

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,22 +9,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-  lint-code:
-    name: Run Linter(s)
+  prettier:
+    name: Run Prettier
     runs-on: ubuntu-latest
 
     steps:
       - name: Check Out Repository
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Run Prettier
+        uses: creyD/prettier_action@v4.2
         with:
-          node-version: ${{matrix.node-version}}
-          cache: 'npm'
-
-      - name: Clean Install Node.js Dependencies
-        run: npm ci
-
-      - name: Run Linters
-        run: prettier -c **
+          prettier_options: -c **
