--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,3 +21,4 @@ jobs:
         uses: creyD/prettier_action@v4.2
         with:
           prettier_options: -c **
+          prettier_plugins: prettier-plugin-svelte
