--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.78",
     "@tailwindcss/typography": "^0.5.2",
-    "daisyui": "^2.15.2"
+    "daisyui": "^2.15.2",
+    "jest-environment-jsdom": "^28.1.2"
   }
 }
